# flask-sqla-api

./: LICENSE  README.md  pyproject.toml  setup.py
flask_sqla_api/: __init__.py  api.py  constants.py  schema.py  views.py
